Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51327

[Windows 8.1]: After maximizing a window and toggling the frameless window hint and moving to another monitor then the window can be too big

XMLWordPrintable

    • 46e9852a1d (qt/qtbase/dev) 46e9852a1d (qt/tqtc-qtbase/dev) d4f38f312a (qt/qtbase/6.2) 71fd17ada1 (qt/qtbase/6.3) d4f38f312a (qt/tqtc-qtbase/6.2) 71fd17ada1 (qt/tqtc-qtbase/6.3) 8c8c39c948 (qt/tqtc-qtbase/5.15)

      [Windows 8.1]: After maximizing a window and toggling the frameless window hint and moving to another monitor then the window can be too big. To reproduce this the windowflags example can be used. It needs a multiple monitor setup and for the task bar to appear on both monitors too.

      • Maximize the preview window on your primary screen
      • Check "Frameless window" to remove the frame of the window. Note that the taskbar is still visible.
      • Now uncheck the "Frameless window" and maximize the preview window on your second screen
      • Check "Frameless window" again to remove the frame of the window. The window now overlaps the taskbar on the second screen.

      This is not a problem on Windows 7 because there is no way (at least I was unable to find one) to have the taskbar across both monitors.

        1. qtbug51327.zip
          3 kB
        2. qtdiag.log
          6 kB
        For Gerrit Dashboard: QTBUG-51327
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: